Remove button spacing from message-dialog Fixes #179

--- a/gtk-3.0/scss/widgets/_misc.scss
+++ b/gtk-3.0/scss/widgets/_misc.scss
@@ -32,7 +32,7 @@
 ************/
 
 @include exports("dialogs") {
-	GtkMessageDialog, .prompt {
+	GtkMessageDialog, .message-dialog, .prompt {
 		-GtkDialog-content-area-border: 0;
 		-GtkDialog-action-area-border: 0;
 		-GtkDialog-button-spacing: 0;
